--- a/front/src/shared/Inputs/PasswordInput/PasswordInput.module.css
+++ b/front/src/shared/Inputs/PasswordInput/PasswordInput.module.css
@@ -1,9 +1,11 @@
 .icon {
+    right: 25px;
     position: absolute;
-    right: 15px;
-    top: 52px;
+    top: 34px;
     transform: translateY(-50%);
     cursor: pointer;
+    height: 25px;
+    width: 25px;
 }
 
 .input {
