--- a/front/src/styles/text.css
+++ b/front/src/styles/text.css
@@ -1,17 +1,16 @@
 @font-face {
-    font-family: Jua;
-    src: url('../assets/fonts/Jua/Jua-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
+  font-family: Jua;
+  src: url('../assets/fonts/Jua/Jua-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
-    font-family: Jua,
-    sans-serif;
-    font-weight: 400;
+  font-family: Jua, sans-serif;
+  font-weight: 400;
 }
 
-.text-error{
-    padding-top: 3px;
-    color: var(--light-gray)
+.text-error {
+  padding-top: 3px;
+  color: var(--light-gray);
 }
